@@ -29,26 +29,25 @@ import org.junit.runner.RunWith;
 import javax.inject.Inject;
 import javax.jms.Message;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.notNullValue;
+import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.awaitility.Awaitility.await;
+import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.*;
 
 @RunWith(Arquillian.class)
 public class AssetEventQueueTest extends BuildAssetServiceDeployment {
-
-    private JMSHelper jmsHelper = new JMSHelper();
 
     @Inject
     AssetModelMapper assetModelMapper;
 
     @Inject
     AssetServiceBean assetServiceBean;
+
+    private final JMSHelper jmsHelper = new JMSHelper();
 
     @Test
     @OperateOnDeployment("normal")
@@ -60,54 +59,62 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         Message response = jmsHelper.listenForResponse(correlationId);
         assertThat(response, is(notNullValue()));
     }
-    
+
     @Test
     @OperateOnDeployment("normal")
     public void getAssetByCFRTest() throws Exception {
         Asset asset = AssetTestHelper.createBasicAsset();
         jmsHelper.upsertAsset(asset);
-        // TODO Find better solution, this is needed due to async jms call
-        Thread.sleep(2000);
-        Asset assetById = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
-        
-        assertThat(assetById, is(notNullValue()));
-        assertThat(assetById.getCfr(), is(asset.getCfr()));
-        assertThat(assetById.getName(), is(asset.getName()));
-        assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
-        assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
+
+                    assertThat(assetById, is(notNullValue()));
+                    assertThat(assetById.getCfr(), is(asset.getCfr()));
+                    assertThat(assetById.getName(), is(asset.getName()));
+                    assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
+                    assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+                });
     }
-    
+
     @Test
     @OperateOnDeployment("normal")
     public void getAssetByIRCSTest() throws Exception {
         Asset asset = AssetTestHelper.createBasicAsset();
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
-        Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
 
-        assertThat(assetById, is(notNullValue()));
-        assertThat(assetById.getCfr(), is(asset.getCfr()));
-        assertThat(assetById.getName(), is(asset.getName()));
-        assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
-        assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+                    assertThat(assetById, is(notNullValue()));
+                    assertThat(assetById.getCfr(), is(asset.getCfr()));
+                    assertThat(assetById.getName(), is(asset.getName()));
+                    assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
+                    assertThat(assetById.getIrcs(), is(asset.getIrcs()));
 
-        assertEquals(AssetIdType.GUID, assetById.getAssetId().getType());
-        assertEquals(assetById.getAssetId().getGuid(), assetById.getAssetId().getValue()); //since guid and value are supposed t obe the same
+                    assertEquals(AssetIdType.GUID, assetById.getAssetId().getType());
+                    assertEquals(assetById.getAssetId().getGuid(), assetById.getAssetId().getValue()); //since guid and value are supposed t obe the same
+                });
     }
-    
+
     @Test
     @OperateOnDeployment("normal")
     public void getAssetByMMSITest() throws Exception {
         Asset asset = AssetTestHelper.createBasicAsset();
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
-        Asset assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
-        
-        assertThat(assetById, is(notNullValue()));
-        assertThat(assetById.getCfr(), is(asset.getCfr()));
-        assertThat(assetById.getName(), is(asset.getName()));
-        assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
-        assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+
+                    assertThat(assetById, is(notNullValue()));
+                    assertThat(assetById.getCfr(), is(asset.getCfr()));
+                    assertThat(assetById.getName(), is(asset.getName()));
+                    assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
+                    assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+                });
     }
 
     @Test
@@ -115,32 +122,43 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
     public void upsertAssetTest() throws Exception {
         Asset asset = AssetTestHelper.createBasicAsset();
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
+
+                    assertThat(assetById, is(notNullValue()));
+                    assertThat(assetById.getCfr(), is(asset.getCfr()));
+                });
 
         String newName = "Name upserted";
         asset.setName(newName);
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
-        
-        Asset assetById = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
-        
-        assertThat(assetById, is(notNullValue()));
-        assertThat(assetById.getCfr(), is(asset.getCfr()));
-        assertThat(assetById.getName(), is(newName));
-        assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
-        assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
+
+                    assertThat(assetById, is(notNullValue()));
+                    assertThat(assetById.getCfr(), is(asset.getCfr()));
+                    assertThat(assetById.getName(), is(newName));
+                    assertThat(assetById.getExternalMarking(), is(asset.getExternalMarking()));
+                    assertThat(assetById.getIrcs(), is(asset.getIrcs()));
+                });
     }
-    
+
     @Test
     @OperateOnDeployment("normal")
     public void assetSourceTest() throws Exception {
         Asset asset = AssetTestHelper.createBasicAsset();
         asset.setSource(CarrierSource.INTERNAL);
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
-        
-        Asset fetchedAsset = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
-        assertThat(fetchedAsset.getSource(), is(asset.getSource()));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset.getCfr(), AssetIdType.CFR);
+                    assertThat(fetchedAsset.getSource(), is(asset.getSource()));
+                });
     }
 
     @Test
@@ -149,32 +167,41 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         Asset asset = AssetTestHelper.createBasicAsset();
         asset.setName(null);
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNull(assetById.getName());
+                });
 
-        Asset assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(assetById.getName() == null);
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(asset.getMmsiNo());
         newAsset.setName("namebyassetinfo");
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-        assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(assetById.getName() != null);
-        assertTrue(assetById.getName().equals("namebyassetinfo"));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(assetById.getName());
+                    assertEquals("namebyassetinfo", assetById.getName());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest2() throws Exception {
-
         Asset assetWithsMMSI = AssetTestHelper.createBasicAsset();
         assetWithsMMSI.setIrcs(null);
         assetWithsMMSI.setName("ShouldNotBeThis");
         jmsHelper.upsertAsset(assetWithsMMSI);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
 
         Asset assetWithsIRCS = AssetTestHelper.createBasicAsset();
@@ -182,7 +209,12 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         assetWithsIRCS.setName("namnetestfall2");
         assetWithsIRCS.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsIRCS);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
@@ -192,20 +224,21 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName(), fetchedAsset.getName().equals(assetWithsIRCS.getName()));
-        assertTrue(fetchedAsset.getMmsiNo() != null);
-        assertTrue(fetchedAsset.getIrcs() != null);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertThat(fetchedAsset.getName(), is(equalTo(assetWithsIRCS.getName())));
+                    assertNotNull(fetchedAsset.getMmsiNo());
+                    assertNotNull(fetchedAsset.getIrcs());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void NationalAssetWithCorrectIrcsAndMmsiAndInternalAssetWithCorrectButFaultyFormatedIrcs() throws Exception {
-
         String correctIrcs = "SFC-" + AssetTestsHelper.getRandomIntegers(4);
         String correctMmsi = AssetTestsHelper.getRandomIntegers(9);
 
@@ -214,8 +247,12 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         internalAsset.setMmsiNo(null);
         internalAsset.setName("ShouldNotBeThis");
         jmsHelper.upsertAsset(internalAsset);
-        Thread.sleep(2000);
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(internalAsset.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
         Asset nationalAsset = AssetTestHelper.createBasicAsset();
         nationalAsset.setMmsiNo(correctMmsi);
@@ -223,8 +260,12 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         nationalAsset.setName("namnetestfall2");
         nationalAsset.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(nationalAsset);
-        Thread.sleep(2000);
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(nationalAsset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(correctMmsi);
@@ -233,16 +274,18 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(nationalAsset.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName(), fetchedAsset.getName().equals(nationalAsset.getName()));
-        assertTrue(fetchedAsset.getMmsiNo() != null);
-        assertEquals(fetchedAsset.getMmsiNo(), correctMmsi);
-        assertTrue(fetchedAsset.getIrcs() != null);
-        assertEquals(fetchedAsset.getIrcs(), correctIrcs);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(nationalAsset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertThat(fetchedAsset.getName(), is(equalTo(nationalAsset.getName())));
+                    assertNotNull(fetchedAsset.getMmsiNo());
+                    assertEquals(fetchedAsset.getMmsiNo(), correctMmsi);
+                    assertNotNull(fetchedAsset.getIrcs());
+                    assertEquals(fetchedAsset.getIrcs(), correctIrcs);
+                });
     }
 
 
@@ -256,10 +299,15 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         assetWithsIRCS.setName(null);
         assetWithsIRCS.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsIRCS);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
         // an ais with a "random" mmsi
-        String mmsi = UUID.randomUUID().toString().substring(0,10);
+        String mmsi = UUID.randomUUID().toString().substring(0, 10);
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(mmsi);
@@ -267,25 +315,29 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(mmsi, AssetIdType.MMSI);
-        assertTrue(fetchedAsset == null);
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(mmsi, AssetIdType.MMSI);
+                    assertNull(fetchedAsset);
+                });
     }
 
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest4() throws Exception {
-
-
         Asset assetWithsIRCS = AssetTestHelper.createBasicAsset();
         assetWithsIRCS.setMmsiNo(null);
         assetWithsIRCS.setName("namnetestfall4");
         assetWithsIRCS.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsIRCS);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setIrcs(assetWithsIRCS.getIrcs());
@@ -293,31 +345,35 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName().equals(assetWithsIRCS.getName()));
-        assertTrue(fetchedAsset.getIrcs() != null);
-        assertTrue(fetchedAsset.getIrcs().equals(assetWithsIRCS.getIrcs()));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertEquals(fetchedAsset.getName(), assetWithsIRCS.getName());
+                    assertNotNull(fetchedAsset.getIrcs());
+                    assertEquals(fetchedAsset.getIrcs(), assetWithsIRCS.getIrcs());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest5() throws Exception {
-
-
         Asset assetWithsMMSI = AssetTestHelper.createBasicAsset();
         assetWithsMMSI.setIrcs(null);
         assetWithsMMSI.setName(null);
         assetWithsMMSI.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsMMSI);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         // an ais with a "random" ircs
-        String ircs = UUID.randomUUID().toString().substring(0,9);
+        String ircs = UUID.randomUUID().toString().substring(0, 9);
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setIrcs(ircs);
@@ -325,24 +381,28 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(ircs, AssetIdType.IRCS);
-        assertTrue(fetchedAsset == null);
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(ircs, AssetIdType.IRCS);
+                    assertNull(fetchedAsset);
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest6() throws Exception {
-
-
         Asset assetWithsMMSI = AssetTestHelper.createBasicAsset();
         assetWithsMMSI.setIrcs(null);
         assetWithsMMSI.setName(null);
         assetWithsMMSI.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsMMSI);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
@@ -351,28 +411,31 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() == null);
-        assertTrue(fetchedAsset.getMmsiNo() != null);
-        assertTrue(fetchedAsset.getMmsiNo().equals(assetWithsMMSI.getMmsiNo()));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                    assertNull(fetchedAsset.getName());
+                    assertNotNull(fetchedAsset.getMmsiNo());
+                    assertEquals(fetchedAsset.getMmsiNo(), assetWithsMMSI.getMmsiNo());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest6XEUSource() throws Exception {
-
-
         Asset assetWithsMMSI = AssetTestHelper.createBasicAsset();
         assetWithsMMSI.setIrcs(null);
         assetWithsMMSI.setName(null);
         assetWithsMMSI.setSource(CarrierSource.XEU);
         jmsHelper.upsertAsset(assetWithsMMSI);
-        Thread.sleep(2000);
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(assetWithsMMSI.getMmsiNo());
@@ -380,28 +443,32 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName().equals(newAsset.getName()));
-        assertTrue(fetchedAsset.getMmsiNo() != null);
-        assertTrue(fetchedAsset.getMmsiNo().equals(assetWithsMMSI.getMmsiNo()));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsMMSI.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertEquals(fetchedAsset.getName(), newAsset.getName());
+                    assertNotNull(fetchedAsset.getMmsiNo());
+                    assertEquals(fetchedAsset.getMmsiNo(), assetWithsMMSI.getMmsiNo());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest7() throws Exception {
-
-
         Asset assetWithsIRCS = AssetTestHelper.createBasicAsset();
         assetWithsIRCS.setMmsiNo(null);
         assetWithsIRCS.setName(null);
         assetWithsIRCS.setSource(CarrierSource.NATIONAL);
         jmsHelper.upsertAsset(assetWithsIRCS);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
@@ -410,27 +477,31 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() == null);
-        assertTrue(fetchedAsset.getIrcs() != null);
-        assertTrue(fetchedAsset.getIrcs().equals(assetWithsIRCS.getIrcs()));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                    assertNull(fetchedAsset.getName());
+                    assertNotNull(fetchedAsset.getIrcs());
+                    assertEquals(fetchedAsset.getIrcs(), assetWithsIRCS.getIrcs());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void assetInformationTest7ThirdCountrySource() throws Exception {
-
-
         Asset assetWithsIRCS = AssetTestHelper.createBasicAsset();
         assetWithsIRCS.setMmsiNo(null);
         assetWithsIRCS.setName(null);
         assetWithsIRCS.setSource(CarrierSource.THIRD_COUNTRY);
         jmsHelper.upsertAsset(assetWithsIRCS);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
@@ -439,15 +510,16 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName().equals(newAsset.getName()));
-        assertTrue(fetchedAsset.getIrcs() != null);
-        assertTrue(fetchedAsset.getIrcs().equals(assetWithsIRCS.getIrcs()));
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(assetWithsIRCS.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertEquals(fetchedAsset.getName(), newAsset.getName());
+                    assertNotNull(fetchedAsset.getIrcs());
+                    assertEquals(fetchedAsset.getIrcs(), assetWithsIRCS.getIrcs());
+                });
     }
 
     @Test
@@ -460,20 +532,26 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         asset.setMmsiNo(null);
         asset.setIrcs(ircs);
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
+                    assertNull(assetById.getMmsiNo());
+                });
 
-        Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
-        assertTrue(assetById.getMmsiNo() == null);
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(AssetTestsHelper.getRandomIntegers(9));
         newAsset.setIrcs(testIrcs);
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-        assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
-        assertTrue(assetById.getMmsiNo() != null);
-        assertTrue(assetById.getMmsiNo().equals(newAsset.getMmsi()));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(assetById.getMmsiNo());
+                    assertEquals(assetById.getMmsiNo(), newAsset.getMmsi());
+                });
     }
 
     @Test
@@ -482,41 +560,59 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         String randomSuffix = AssetTestsHelper.getRandomIntegers(6);
         String ircs = "I" + randomSuffix;
         String testIrcs = "I " + randomSuffix;
+
         Asset asset = AssetTestHelper.createBasicAsset();
         asset.setSource(CarrierSource.NATIONAL);
         asset.setMmsiNo(null);
         asset.setIrcs(ircs);
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(fetchedAsset);
+                });
 
         Asset asset2 = AssetTestHelper.createBasicAsset();
         String mmsi = AssetTestsHelper.getRandomIntegers(9);
         asset2.setMmsiNo(mmsi);
         asset2.setIrcs(null);
         jmsHelper.upsertAsset(asset2);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset2.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
         newAsset.setMmsi(mmsi);
         newAsset.setIrcs(testIrcs);
-        jmsHelper.assetInfo(Arrays.asList(newAsset));
-        Thread.sleep(2000);
-        Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
-        assertTrue(assetById.getMmsiNo() != null);
-        assertTrue(assetById.getMmsiNo().equals(newAsset.getMmsi()));
-        Asset assetByMmsi = jmsHelper.getAssetById(mmsi, AssetIdType.MMSI);
-        assertEquals(assetByMmsi.getAssetId().getGuid(), assetById.getAssetId().getGuid());
+        jmsHelper.assetInfo(List.of(newAsset));
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset assetById = jmsHelper.getAssetById(asset.getIrcs(), AssetIdType.IRCS);
+                    assertNotNull(assetById.getMmsiNo());
+                    assertEquals(assetById.getMmsiNo(), newAsset.getMmsi());
+                    Asset assetByMmsi = jmsHelper.getAssetById(mmsi, AssetIdType.MMSI);
+                    assertEquals(assetByMmsi.getAssetId().getGuid(), assetById.getAssetId().getGuid());
+                });
     }
 
     @Test
     @OperateOnDeployment("normal")
     public void updateAssetWithEmptyStringIRCS() throws Exception {
-
         Asset asset = AssetTestHelper.createBasicAsset();
         asset.setIrcs("");
         asset.setName("updateAssetWithEmptyStringIRCS");
         jmsHelper.upsertAsset(asset);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
 
@@ -526,21 +622,22 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
-
-        Asset fetchedAsset = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAsset != null);
-        assertTrue(fetchedAsset.getName() != null);
-        assertTrue(fetchedAsset.getName(), fetchedAsset.getName().equals(asset.getName()));
-        assertTrue(fetchedAsset.getMmsiNo() != null);
-        assertTrue(fetchedAsset.getIrcs() == null);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                    assertNotNull(fetchedAsset.getName());
+                    assertThat(fetchedAsset.getName(), is(equalTo(asset.getName())));
+                    assertNotNull(fetchedAsset.getMmsiNo());
+                    assertNull(fetchedAsset.getIrcs());
+                });
     }
 
 
     @Test
     @OperateOnDeployment("normal")
     public void createSeveralAssetsWithEmptyStringIRCSAndUpdateOneOfThemTest() throws Exception {
-
         Asset asset = AssetTestHelper.createBasicAsset();
         asset.setIrcs("");
         asset.setName("createAssetWithEmptyStringIRCS");
@@ -550,7 +647,12 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         asset2.setIrcs("");
         asset2.setName("createAssetWithEmptyStringIRCS2");
         jmsHelper.upsertAsset(asset2);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAsset = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAsset);
+                });
 
         fish.focus.uvms.asset.domain.entity.Asset newAsset = new fish.focus.uvms.asset.domain.entity.Asset();
 
@@ -560,21 +662,23 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         List<fish.focus.uvms.asset.domain.entity.Asset> assetList = new ArrayList<>();
         assetList.add(newAsset);
         jmsHelper.assetInfo(assetList);
-        Thread.sleep(2000);
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    Asset fetchedAssetNotUpdated = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAssetNotUpdated);
+                    assertNotNull(fetchedAssetNotUpdated.getName());
+                    assertThat(fetchedAssetNotUpdated.getName(), is(equalTo(asset.getName())));
+                    assertNotNull(fetchedAssetNotUpdated.getMmsiNo());
+                    assertNull(fetchedAssetNotUpdated.getIrcs());
 
-        Asset fetchedAssetNotUpdated = jmsHelper.getAssetById(asset.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAssetNotUpdated != null);
-        assertTrue(fetchedAssetNotUpdated.getName() != null);
-        assertTrue(fetchedAssetNotUpdated.getName(), fetchedAssetNotUpdated.getName().equals(asset.getName()));
-        assertTrue(fetchedAssetNotUpdated.getMmsiNo() != null);
-        assertTrue(fetchedAssetNotUpdated.getIrcs() == null);
-
-        Asset fetchedAssetUpdated = jmsHelper.getAssetById(asset2.getMmsiNo(), AssetIdType.MMSI);
-        assertTrue(fetchedAssetUpdated != null);
-        assertTrue(fetchedAssetUpdated.getName() != null);
-        assertTrue(fetchedAssetUpdated.getName(), fetchedAssetUpdated.getName().equals(newAsset.getName()));
-        assertTrue(fetchedAssetUpdated.getMmsiNo() != null);
-        assertTrue(fetchedAssetUpdated.getIrcs() == null);
+                    Asset fetchedAssetUpdated = jmsHelper.getAssetById(asset2.getMmsiNo(), AssetIdType.MMSI);
+                    assertNotNull(fetchedAssetUpdated);
+                    assertNotNull(fetchedAssetUpdated.getName());
+                    assertThat(fetchedAssetUpdated.getName(), is(equalTo(newAsset.getName())));
+                    assertNotNull(fetchedAssetUpdated.getMmsiNo());
+                    assertNull(fetchedAssetUpdated.getIrcs());
+                });
     }
 
     @Test
@@ -583,18 +687,16 @@ public class AssetEventQueueTest extends BuildAssetServiceDeployment {
         Asset assetType = AssetTestHelper.createBasicAsset();
         fish.focus.uvms.asset.domain.entity.Asset asset = assetModelMapper.toAssetEntity(assetType);
         asset.setName("Create with national id");
-        Long nationalId = (long)(Math.random() * 10000000d);
+        Long nationalId = (long) (Math.random() * 10000000d);
         asset.setNationalId(nationalId);
 
         jmsHelper.upsertAssetUsingMethod(asset);
-        Thread.sleep(1000);
-
-        fish.focus.uvms.asset.domain.entity.Asset assetById = assetServiceBean.getAssetById(AssetIdentifier.NATIONAL, nationalId.toString());
-        assertEquals(nationalId, assetById.getNationalId());
-        assertEquals(asset.getName(), assetById.getName());
-
+        await()
+                .atMost(2, SECONDS)
+                .untilAsserted(() -> {
+                    fish.focus.uvms.asset.domain.entity.Asset assetById = assetServiceBean.getAssetById(AssetIdentifier.NATIONAL, nationalId.toString());
+                    assertEquals(nationalId, assetById.getNationalId());
+                    assertEquals(asset.getName(), assetById.getName());
+                });
     }
-
-
-
 }
